--- a/packages/wuf-web-assets/assets/styles/partials/_body.scss
+++ b/packages/wuf-web-assets/assets/styles/partials/_body.scss
@@ -10,7 +10,7 @@ html, body {
 body {
     overflow: hidden;
     min-height: 100vh;
-    background-color: var(--kg-body-bg);
+    background-color: var(--wuf-body-bg);
 
     /***** scrolling areas *****/
     &, * {
