--- a/packages/wuf-web-assets/assets/styles/partials/_popover.scss
+++ b/packages/wuf-web-assets/assets/styles/partials/_popover.scss
@@ -6,14 +6,14 @@
 // Popovers
 
 $popover-font-size: $font-size-sm;
-$popover-bg: var(--kg-color-white);
+$popover-bg: var(--wuf-color-white);
 $popover-max-width: 276px;
 $popover-border-width: 1px;
-$popover-border-color: var(--kg-color-gray-300);
+$popover-border-color: var(--wuf-color-gray-300);
 $popover-border-radius: $border-radius-lg;
 $popover-box-shadow: 0 .25rem .5rem rgba($black, .2);
 
-$popover-header-bg: var(--kg-color-white);
+$popover-header-bg: var(--wuf-color-white);
 $popover-header-color: #000;
 $popover-header-border-color: transparent;
 $popover-header-padding-y: .5rem;
