--- a/packages/wuf-web-assets/assets/styles/partials/_toasts.scss
+++ b/packages/wuf-web-assets/assets/styles/partials/_toasts.scss
@@ -6,18 +6,18 @@
 /////////////////////////////////////////////////////////////////
 ////// TOAST - SNACKBAR
 .toast.info {
-	color: var(--kg-color-info) !important;
-	border-bottom: 4px solid var(--kg-color-info);
+	color: var(--wuf-color-info) !important;
+	border-bottom: 4px solid var(--wuf-color-info);
 }
 .toast.success {
-	color: var(--kg-color-success) !important;
-	border-bottom: 4px solid var(--kg-color-success);
+	color: var(--wuf-color-success) !important;
+	border-bottom: 4px solid var(--wuf-color-success);
 }
 .toast.warning {
-	color: var(--kg-color-warning) !important;
-	border-bottom: 4px solid var(--kg-color-warning);
+	color: var(--wuf-color-warning) !important;
+	border-bottom: 4px solid var(--wuf-color-warning);
 }
 .toast.error {
-	color: var(--kg-color-danger) !important;
-	border-bottom: 4px solid var(--kg-color-danger);
+	color: var(--wuf-color-danger) !important;
+	border-bottom: 4px solid var(--wuf-color-danger);
 }
