--- a/src/app/pages/components/breadcrumb/breadcrumb.component.html
+++ b/src/app/pages/components/breadcrumb/breadcrumb.component.html
@@ -93,7 +93,7 @@
                         <td class="description">Text color for breadcrumb trails. This color is lightened via opacity
                             for
                             non-active breadrumb links.</td>
-                        <td class="value">var(--kg-color-gray-500)</td>
+                        <td class="value">var(--wuf-color-gray-500)</td>
                     </tr>
                 </table>
 
