--- a/src/app/pages/components/dashboard/dashboard.component.html
+++ b/src/app/pages/components/dashboard/dashboard.component.html
@@ -282,39 +282,39 @@
                 </tr>
                 </thead>
                 <tr>
-                    <td class="propName">--kg-dashboard-content-padding</td>
+                    <td class="propName">--wuf-dashboard-content-padding</td>
                     <td class="description">The CSS value for padding to use in the content area of the dashboard.</td>
                     <td class="value">20px</td>
                 </tr>
                 <tr>
                     <td class="propName">--kpi-border-color</td>
                     <td class="description">The color for the line vertically separating the KPIs.</td>
-                    <td class="value">var(--kg-kpi-border-color, var(--kg-color-gray-400))</td>
+                    <td class="value">var(--wuf-kpi-border-color, var(--wuf-color-gray-400))</td>
                 </tr>
                 <tr>
                     <td class="propName">--kpi-stripe-color</td>
                     <td class="description">The color of the thick vertical line appearing on the right side of the KPI.</td>
-                    <td class="value">var(--kg-kpi-stripe-color, var(--kpi-border-color))</td>
+                    <td class="value">var(--wuf-kpi-stripe-color, var(--kpi-border-color))</td>
                 </tr>
                 <tr>
                     <td class="propName">--kpi-label-color</td>
                     <td class="description">The color of the label appearing above the KPI value.</td>
-                    <td class="value">var(--kg-kpi-label-color, var(--kg-color-gray-600))</td>
+                    <td class="value">var(--wuf-kpi-label-color, var(--wuf-color-gray-600))</td>
                 </tr>
                 <tr>
                     <td class="propName">--kpi-bg-color</td>
                     <td class="description">The background color of the KPI element.</td>
-                    <td class="value">var(--kg-kpi-bg-color, var(--kg-color-gray-200))</td>
+                    <td class="value">var(--wuf-kpi-bg-color, var(--wuf-color-gray-200))</td>
                 </tr>
                 <tr>
                     <td class="propName">--kpi-active-bg-color</td>
                     <td class="description">The background color of the KPI element in an active state.</td>
-                    <td class="value">var(--kg-kpi-active-bg-color, var(--kg-color-primary-darker-5))</td>
+                    <td class="value">var(--wuf-kpi-active-bg-color, var(--wuf-color-primary-darker-5))</td>
                 </tr>
                 <tr>
                     <td class="propName">--kpi-active-stripe-color</td>
                     <td class="description">The stripe color to use for the KPI element in an active state.  This color is overridden when the <code>color</code> property is used.</td>
-                    <td class="value">var(--kg-kpi-active-stripe-color, var(--kg-color-primary-lighter-10))</td>
+                    <td class="value">var(--wuf-kpi-active-stripe-color, var(--wuf-color-primary-lighter-10))</td>
                 </tr>
             </table>
         </kg-kpi>
