--- a/src/app/pages/components/drawer/drawer.component.html
+++ b/src/app/pages/components/drawer/drawer.component.html
@@ -108,22 +108,22 @@
                 </tr>
                 </thead>
                 <tr>
-                    <td class="propName">--kg-drawer-width</td>
+                    <td class="propName">--wuf-drawer-width</td>
                     <td class="description">The width of the drawer when visible.  Takes any CSS value for width.</td>
                     <td class="value">300px</td>
                 </tr>
                 <tr>
-                    <td class="propName">--kg-drawer-header-bg-color</td>
+                    <td class="propName">--wuf-drawer-header-bg-color</td>
                     <td class="description">The background color for the titlebar of the drawer.  It's recommended to use an rgba value so that it is compatible with Dark Theme mode.</td>
                     <td class="value">rgba(0,0,0, .05)</td>
                 </tr>
                 <tr>
-                    <td class="propName">--kg-drawer-body-bg-color</td>
+                    <td class="propName">--wuf-drawer-body-bg-color</td>
                     <td class="description">The background color for the body of the drawer.</td>
-                    <td class="value">var(--kg-body-bg, var(--kg-color-gray-100, #404040) )</td>
+                    <td class="value">var(--wuf-body-bg, var(--wuf-color-gray-100, #404040) )</td>
                 </tr>
                 <tr>
-                    <td class="propName">--kg-drawer-shield-bg-color</td>
+                    <td class="propName">--wuf-drawer-shield-bg-color</td>
                     <td class="description">The background color for the overlay "shield" appearing behind the drawer.</td>
                     <td class="value">rgba(0,0,0, .2)</td>
                 </tr>
