--- a/src/app/pages/components/forms/forms.component.html
+++ b/src/app/pages/components/forms/forms.component.html
@@ -418,34 +418,34 @@
                 </tr>
                 </thead>
                 <tr>
-                    <td class="propName">--kg-input-bg-color</td>
+                    <td class="propName">--wuf-input-bg-color</td>
                     <td class="description">The background color used for all text inputs and select controls.</td>
-                    <td class="value">var(--kg-color-gray-200, #EEEEEE)</td>
+                    <td class="value">var(--wuf-color-gray-200, #EEEEEE)</td>
                 </tr>
                 <tr>
-                    <td class="propName">--kg-input-readonly-bg-color</td>
+                    <td class="propName">--wuf-input-readonly-bg-color</td>
                     <td class="description">The background color used for all text inputs and select controls in a readonly state.</td>
                     <td class="value">transparent</td>
                 </tr>
                 <tr>
-                    <td class="propName">--kg-input-hover-bg-color</td>
+                    <td class="propName">--wuf-input-hover-bg-color</td>
                     <td class="description">The background color used for all text inputs and select controls when hovering over the control.</td>
-                    <td class="value">var(--kg-input-bg-color)</td>
+                    <td class="value">var(--wuf-input-bg-color)</td>
                 </tr>
                 <tr>
-                    <td class="propName">--kg-input-disabled-opacity</td>
+                    <td class="propName">--wuf-input-disabled-opacity</td>
                     <td class="description">The opacity used for various elements when the form control is in a disabled state.</td>
                     <td class="value">.5</td>
                 </tr>
                 <tr>
-                    <td class="propName">--kg-input-hint-color</td>
+                    <td class="propName">--wuf-input-hint-color</td>
                     <td class="description">The text color used for hint text.  Note that this value will also have a non-overridable opacity level applied to it.</td>
-                    <td class="value">var(--kg-body-color, #616161)</td>
+                    <td class="value">var(--wuf-body-color, #616161)</td>
                 </tr>
                 <tr>
-                    <td class="propName">--kg-input-underline-color</td>
+                    <td class="propName">--wuf-input-underline-color</td>
                     <td class="description">The color used for the underline element applied to form inputs.</td>
-                    <td class="value">var(--kg-body-color, #616161)</td>
+                    <td class="value">var(--wuf-body-color, #616161)</td>
                 </tr>
             </table>
         </div>
