--- a/src/app/pages/components/navigation-footer/navigation-footer.component.html
+++ b/src/app/pages/components/navigation-footer/navigation-footer.component.html
@@ -29,7 +29,7 @@
 
             <h4>Default</h4>
             <div
-                style="width: 230px; background-color: var(--kg-sidebar-bg-color); color: var(--kg-sidebar-color); margin-bottom: 20px;">
+                style="width: 230px; background-color: var(--wuf-sidebar-bg-color); color: var(--wuf-sidebar-color); margin-bottom: 20px;">
                 <kg-sidebar-footer></kg-sidebar-footer>
             </div>
             <br>
@@ -38,7 +38,7 @@
             <p>Note: It's recommended to pass copyrightName via <a routerLink="/setup/configuration">configuration
                 service</a>.</p>
             <div
-                style="width: 230px; background-color: var(--kg-sidebar-bg-color); color: var(--kg-sidebar-color); margin-bottom: 20px;">
+                style="width: 230px; background-color: var(--wuf-sidebar-bg-color); color: var(--wuf-sidebar-color); margin-bottom: 20px;">
                 <kg-sidebar-footer [copyrightName]="'KION, Inc.'"></kg-sidebar-footer>
             </div>
 
@@ -46,7 +46,7 @@
 
             <h4>Custom Content</h4>
             <div
-                style="width: 230px; background-color: var(--kg-sidebar-bg-color); color: var(--kg-sidebar-color); margin-bottom: 20px;">
+                style="width: 230px; background-color: var(--wuf-sidebar-bg-color); color: var(--wuf-sidebar-color); margin-bottom: 20px;">
                 <kg-sidebar-footer>I'm custom content!</kg-sidebar-footer>
             </div>
             <br>
@@ -54,7 +54,7 @@
             <h4>Footer Icons/Links</h4>
 
             <div
-                style="width: 230px; background-color: var(--kg-sidebar-bg-color); color: var(--kg-sidebar-color); margin-bottom: 20px;">
+                style="width: 230px; background-color: var(--wuf-sidebar-bg-color); color: var(--wuf-sidebar-color); margin-bottom: 20px;">
                 <kg-sidebar-footer [dataUrl]="footerDataUrl"></kg-sidebar-footer>
             </div>
         </div>
@@ -144,39 +144,39 @@
                 </tr>
                 </thead>
                 <tr>
-                    <td class="propName">--kg-sidebar-footer-height</td>
+                    <td class="propName">--wuf-sidebar-footer-height</td>
                     <td class="description">The sidebar footer's height.</td>
-                    <td class="value">var(--kg-footer-height)</td>
+                    <td class="value">var(--wuf-footer-height)</td>
                 </tr>
                 <tr>
-                    <td class="propName">--kg-sidebar-footer-bg-color</td>
+                    <td class="propName">--wuf-sidebar-footer-bg-color</td>
                     <td class="description">The sidebar footer's background color.</td>
-                    <td class="value">var(--kg-color-primary-darker-15)</td>
+                    <td class="value">var(--wuf-color-primary-darker-15)</td>
                 </tr>
                 <tr>
-                    <td class="propName">--kg-sidebar-footer-color</td>
+                    <td class="propName">--wuf-sidebar-footer-color</td>
                     <td class="description">The sidebar footer's text color.</td>
-                    <td class="value">var(--kg-color-primary-lighter-10)</td>
+                    <td class="value">var(--wuf-color-primary-lighter-10)</td>
                 </tr>
                 <tr>
-                    <td class="propName">--kg-sidebar-footer-hover-color</td>
+                    <td class="propName">--wuf-sidebar-footer-hover-color</td>
                     <td class="description">The sidebar footer's link hover color.</td>
-                    <td class="value">var(--kg-color-primary-lighter-20)</td>
+                    <td class="value">var(--wuf-color-primary-lighter-20)</td>
                 </tr>
                 <tr>
-                    <td class="propName">--kg-sidebar-footer-hover-bg-color</td>
+                    <td class="propName">--wuf-sidebar-footer-hover-bg-color</td>
                     <td class="description">The sidebar footer's hover background color.</td>
-                    <td class="value">var(--kg-color-primary-darker-25)</td>
+                    <td class="value">var(--wuf-color-primary-darker-25)</td>
                 </tr>
                 <tr>
-                    <td class="propName">--kg-sidebar-footer-active-color</td>
+                    <td class="propName">--wuf-sidebar-footer-active-color</td>
                     <td class="description">The background color to display on active sidebar footer items.</td>
-                    <td class="value">var(--kg-color-white)</td>
+                    <td class="value">var(--wuf-color-white)</td>
                 </tr>
                 <tr>
-                    <td class="propName">--kg-sidebar-footer-active-bg-color</td>
+                    <td class="propName">--wuf-sidebar-footer-active-bg-color</td>
                     <td class="description">The text color to display on active sidebar footer items.</td>
-                    <td class="value">var(--kg-color-secondary)</td>
+                    <td class="value">var(--wuf-color-secondary)</td>
                 </tr>
             </table>
 
