--- a/src/app/pages/components/toolbar/toolbar.component.html
+++ b/src/app/pages/components/toolbar/toolbar.component.html
@@ -94,44 +94,44 @@
                 </tr>
                 </thead>
                 <tr>
-                    <td class="propName">--kg-toolbar-color</td>
+                    <td class="propName">--wuf-toolbar-color</td>
                     <td class="description">Toolbar text color.</td>
-                    <td class="value">var(--kg-body-color)</td>
+                    <td class="value">var(--wuf-body-color)</td>
                 </tr>
                 <tr>
-                    <td class="propName">--kg-toolbar-bg-color</td>
+                    <td class="propName">--wuf-toolbar-bg-color</td>
                     <td class="description">Toolbar background color.</td>
-                    <td class="value">var(--kg-color-gray-200)</td>
+                    <td class="value">var(--wuf-color-gray-200)</td>
                 </tr>
                 <tr>
-                    <td class="propName">--kg-toolbar-height</td>
+                    <td class="propName">--wuf-toolbar-height</td>
                     <td class="description">Toolbar height.</td>
                     <td class="value">40px</td>
                 </tr>
                 <tr>
-                    <td class="propName">--kg-toolbar-link-color</td>
+                    <td class="propName">--wuf-toolbar-link-color</td>
                     <td class="description">Toolbar link text color.</td>
-                    <td class="value">var(--kg-color-gray-600)</td>
+                    <td class="value">var(--wuf-color-gray-600)</td>
                 </tr>
                 <tr>
-                    <td class="propName">--kg-toolbar-link-hover-color</td>
+                    <td class="propName">--wuf-toolbar-link-hover-color</td>
                     <td class="description">Toolbar link text hover color.</td>
-                    <td class="value">var(--kg-color-gray-700)</td>
+                    <td class="value">var(--wuf-color-gray-700)</td>
                 </tr>
                 <tr>
-                    <td class="propName">--kg-toolbar-button-color</td>
+                    <td class="propName">--wuf-toolbar-button-color</td>
                     <td class="description">Toolbar button text color.</td>
-                    <td class="value">var(--kg-color-gray-600)</td>
+                    <td class="value">var(--wuf-color-gray-600)</td>
                 </tr>
                 <tr>
-                    <td class="propName">--kg-toolbar-button-bg-color</td>
+                    <td class="propName">--wuf-toolbar-button-bg-color</td>
                     <td class="description">Toolbar button background color.</td>
-                    <td class="value">var(--kg-color-gray-200)</td>
+                    <td class="value">var(--wuf-color-gray-200)</td>
                 </tr>
                 <tr>
-                    <td class="propName">--kg-toolbar-button-bg-hover-color</td>
+                    <td class="propName">--wuf-toolbar-button-bg-hover-color</td>
                     <td class="description">Toolbar button hover background color.</td>
-                    <td class="value">var(--kg-color-gray-100)</td>
+                    <td class="value">var(--wuf-color-gray-100)</td>
                 </tr>
             </table>
 
