--- a/src/app/pages/components/web-messages/web-messages.component.html
+++ b/src/app/pages/components/web-messages/web-messages.component.html
@@ -67,79 +67,79 @@
                 </tr>
                 </thead>
                 <tr>
-                    <td class="propName">--kg-message-success-bg-color</td>
+                    <td class="propName">--wuf-message-success-bg-color</td>
                     <td class="description">Color to use for info message background.</td>
-                    <td class="value">var(--kg-color-success)</td>
+                    <td class="value">var(--wuf-color-success)</td>
                 </tr>
                 <tr>
-                    <td class="propName">--kg-message-success-color</td>
+                    <td class="propName">--wuf-message-success-color</td>
                     <td class="description">Color to use for success message text.</td>
-                    <td class="value">var(--kg-color-white)</td>
+                    <td class="value">var(--wuf-color-white)</td>
                 </tr>
                 <tr>
-                    <td class="propName">--kg-message-success-link-color</td>
+                    <td class="propName">--wuf-message-success-link-color</td>
                     <td class="description">Color to use for success message links appearing in message body.</td>
-                    <td class="value">var(--kg-color-success-darker)</td>
+                    <td class="value">var(--wuf-color-success-darker)</td>
                 </tr>
                 <tr>
-                    <td class="propName">--kg-message-info-bg-color</td>
+                    <td class="propName">--wuf-message-info-bg-color</td>
                     <td class="description">Color to use for info message background.</td>
-                    <td class="value">var(--kg-color-info)</td>
+                    <td class="value">var(--wuf-color-info)</td>
                 </tr>
                 <tr>
-                    <td class="propName">--kg-message-info-color</td>
+                    <td class="propName">--wuf-message-info-color</td>
                     <td class="description">Color to use for info message text.</td>
-                    <td class="value">var(--kg-color-white)</td>
+                    <td class="value">var(--wuf-color-white)</td>
                 </tr>
                 <tr>
-                    <td class="propName">--kg-message-info-link-color</td>
+                    <td class="propName">--wuf-message-info-link-color</td>
                     <td class="description">Color to use for info message links appearing in message body.</td>
-                    <td class="value">var(--kg-color-info-darker)</td>
+                    <td class="value">var(--wuf-color-info-darker)</td>
                 </tr>
                 <tr>
-                    <td class="propName">--kg-message-warning-bg-color</td>
+                    <td class="propName">--wuf-message-warning-bg-color</td>
                     <td class="description">Color to use for warning message background.</td>
-                    <td class="value">var(--kg-color-warning)</td>
+                    <td class="value">var(--wuf-color-warning)</td>
                 </tr>
                 <tr>
-                    <td class="propName">--kg-message-warning-color</td>
+                    <td class="propName">--wuf-message-warning-color</td>
                     <td class="description">Color to use for warning message text.</td>
-                    <td class="value">var(--kg-color-warning-darkest)</td>
+                    <td class="value">var(--wuf-color-warning-darkest)</td>
                 </tr>
                 <tr>
-                    <td class="propName">--kg-message-warning-link-color</td>
+                    <td class="propName">--wuf-message-warning-link-color</td>
                     <td class="description">Color to use for warning message links appearing in message body.</td>
-                    <td class="value">var(--kg-color-warning-darker)</td>
+                    <td class="value">var(--wuf-color-warning-darker)</td>
                 </tr>
                 <tr>
-                    <td class="propName">--kg-message-danger-bg-color</td>
+                    <td class="propName">--wuf-message-danger-bg-color</td>
                     <td class="description">Color to use for danger/alert message background.</td>
-                    <td class="value">var(--kg-color-danger)</td>
+                    <td class="value">var(--wuf-color-danger)</td>
                 </tr>
                 <tr>
-                    <td class="propName">--kg-message-danger-color</td>
+                    <td class="propName">--wuf-message-danger-color</td>
                     <td class="description">Color to use for danger/alert message text.</td>
-                    <td class="value">var(--kg-color-white)</td>
+                    <td class="value">var(--wuf-color-white)</td>
                 </tr>
                 <tr>
-                    <td class="propName">--kg-message-danger-link-color</td>
+                    <td class="propName">--wuf-message-danger-link-color</td>
                     <td class="description">Color to use for danger/alert message links appearing in message body.</td>
-                    <td class="value">var(--kg-color-danger-darker)</td>
+                    <td class="value">var(--wuf-color-danger-darker)</td>
                 </tr>
                 <tr>
-                    <td class="propName">--kg-message-close-color</td>
+                    <td class="propName">--wuf-message-close-color</td>
                     <td class="description">Color to use for message color button.</td>
-                    <td class="value">var( --kg-color-gray-800, #424242 )</td>
+                    <td class="value">var( --wuf-color-gray-800, #424242 )</td>
                 </tr>
                 <tr>
-                    <td class="propName">--kg-message-close-hover-color</td>
+                    <td class="propName">--wuf-message-close-hover-color</td>
                     <td class="description">Color to use for message color button on hover.</td>
-                    <td class="value">var( --kg-color-gray-800, #424242 )</td>
+                    <td class="value">var( --wuf-color-gray-800, #424242 )</td>
                 </tr>
                 <tr>
-                    <td class="propName">--kg-message-close-shadow-color</td>
+                    <td class="propName">--wuf-message-close-shadow-color</td>
                     <td class="description">Color to use for message close button shadow.</td>
-                    <td class="value">var( --kg-color-white, #ffffff )</td>
+                    <td class="value">var( --wuf-color-white, #ffffff )</td>
                 </tr>
             </table>
 
