--- a/packages/wuf-web-assets/assets/styles/mixins/_alert.scss
+++ b/packages/wuf-web-assets/assets/styles/mixins/_alert.scss
@@ -4,13 +4,13 @@
  */
 
 @mixin alert-variant($colorName) {
-    $css-prop: var(--kg-color-#{$colorName});
+    $css-prop: var(--wuf-color-#{$colorName});
     $color: $css-prop;
-    $color-rgb: var(--kg-color-rgb-#{$colorName});
+    $color-rgb: var(--wuf-color-rgb-#{$colorName});
     $border: $css-prop;
 
     color: $color;
-    background: var(--kg-color-white) #{'linear-gradient(to bottom, rgba(' + $color-rgb + ', .25), rgba(' + $color-rgb + ', .25)) repeat-x'};
+    background: var(--wuf-color-white) #{'linear-gradient(to bottom, rgba(' + $color-rgb + ', .25), rgba(' + $color-rgb + ', .25)) repeat-x'};
     border-color: $border;
     border-style: solid;
     border-width: 0;
