--- a/packages/wuf-web-assets/assets/styles/mixins/_border-radius.scss
+++ b/packages/wuf-web-assets/assets/styles/mixins/_border-radius.scss
@@ -5,7 +5,7 @@
 
 // Single side border-radius
 
-@mixin border-radius($radius: var(--kg-border-radius)) {
+@mixin border-radius($radius: var(--wuf-border-radius)) {
     border-radius: $radius;
 }
 
