--- a/packages/wuf-web-assets/assets/styles/mixins/_material.scss
+++ b/packages/wuf-web-assets/assets/styles/mixins/_material.scss
@@ -17,20 +17,20 @@ $kg-input-hint-vert-padding: .3em;
     /*     local var           ||            global override            ||        default value        */
 
     // inputs
-    --kg-input-bg-color:                var(--kg-color-gray-200,                    #EEEEEE);
-    --kg-input-readonly-bg-color:       transparent;
-    --kg-input-hover-bg-color:          var(--kg-input-bg-color);
-    --kg-input-disabled-opacity:        .5;
-    --kg-input-hint-color:              var(--kg-body-color,                        #616161);
-    --kg-input-underline-color:         var(--kg-body-color,                        #616161);
+    --wuf-input-bg-color:                var(--wuf-color-gray-200,                    #EEEEEE);
+    --wuf-input-readonly-bg-color:       transparent;
+    --wuf-input-hover-bg-color:          var(--wuf-input-bg-color);
+    --wuf-input-disabled-opacity:        .5;
+    --wuf-input-hint-color:              var(--wuf-body-color,                        #616161);
+    --wuf-input-underline-color:         var(--wuf-body-color,                        #616161);
 
     // cards
-    --kg-card-bg-color:                 var(--kg-color-white,                       #ffffff);
+    --wuf-card-bg-color:                 var(--wuf-color-white,                       #ffffff);
 }
 
 @mixin dotted-underline {
     background-color: initial;
-    background-image: linear-gradient(to right, rgba(0,0,0,0) 0%, rgba(0,0,0,0) 33%, var(--kg-input-underline-color) 0%)!important;
+    background-image: linear-gradient(to right, rgba(0,0,0,0) 0%, rgba(0,0,0,0) 33%, var(--wuf-input-underline-color) 0%)!important;
     background-size: 6px 100%!important;
     background-repeat: repeat-x;
 }
@@ -46,7 +46,7 @@ $kg-input-hint-vert-padding: .3em;
     .mat-form-field-appearance-legacy {
         .mat-hint {
             padding: $kg-input-hint-vert-padding $kg-input-hint-horiz-padding 0 $kg-input-hint-horiz-padding;
-            color: var(--kg-input-hint-color);
+            color: var(--wuf-input-hint-color);
             opacity: .38;
         }
         .mat-form-field-wrapper {
@@ -54,8 +54,8 @@ $kg-input-hint-vert-padding: .3em;
         }
         .mat-form-field-infix {
             padding: $kg-input-vert-padding $kg-input-horiz-padding;
-            @include border-top-radius(var(--kg-border-radius));
-            background-color: var(--kg-input-bg-color);
+            @include border-top-radius(var(--wuf-border-radius));
+            background-color: var(--wuf-input-bg-color);
             border-top-width: $kg-input-vert-padding;
         }
         .mat-form-field-subscript-wrapper {
@@ -71,10 +71,10 @@ $kg-input-hint-vert-padding: .3em;
             top: -($kg-label-offset);
         }
         .mat-form-field-underline {
-            background-color: var(--kg-input-underline-color);
+            background-color: var(--wuf-input-underline-color);
         }
         .mat-form-field-label {
-            color: var(--kg-body-color);
+            color: var(--wuf-body-color);
         }
 
         // labels
@@ -104,17 +104,17 @@ $kg-input-hint-vert-padding: .3em;
     .mat-form-field {
         .mat-form-field-suffix,
         .mat-form-field-prefix {
-            background-color: var(--kg-input-bg-color);
+            background-color: var(--wuf-input-bg-color);
         }
         .mat-form-field-prefix {
             padding: 1.32em .5em .5em .5em;
-            @include border-top-left-radius(var(--kg-border-radius));
-            margin-right: calc(var(--kg-border-radius) * -1);
+            @include border-top-left-radius(var(--wuf-border-radius));
+            margin-right: calc(var(--wuf-border-radius) * -1);
         }
         .mat-form-field-suffix {
             padding: 1.31em .5em .5em 0;
-            @include border-top-right-radius(var(--kg-border-radius));
-            margin-left: calc(var(--kg-border-radius) * -1);
+            @include border-top-right-radius(var(--wuf-border-radius));
+            margin-left: calc(var(--wuf-border-radius) * -1);
         }
         .mat-form-field-prefix,
         .mat-form-field-suffix {
@@ -133,22 +133,22 @@ $kg-input-hint-vert-padding: .3em;
     .mat-form-field-appearance-legacy {
         &.mat-form-field-invalid {
             .mat-form-field-infix {
-                border-color: var(--kg-color-danger-lighter-20);
-                background: var(--kg-color-danger-lighter-20);
+                border-color: var(--wuf-color-danger-lighter-20);
+                background: var(--wuf-color-danger-lighter-20);
             }
             .mat-form-field-suffix,
             .mat-form-field-prefix {
-                background: var(--kg-color-danger-lighter-20);
+                background: var(--wuf-color-danger-lighter-20);
             }
             .errorIcon {
                 position: relative;
                 top: -5px;
-                color: var(--kg-color-white);
+                color: var(--wuf-color-white);
             }
             .mat-form-field-label {
-                color: var(--kg-color-white);
+                color: var(--wuf-color-white);
                 .mat-form-field-required-marker {
-                    color: var(--kg-color-white);
+                    color: var(--wuf-color-white);
                 }
             }
             // Error message
@@ -168,20 +168,20 @@ $kg-input-hint-vert-padding: .3em;
             */
             input,
             .mat-form-field-label-wrapper {
-                opacity: var(--kg-input-disabled-opacity);
-                color: var(--kg-body-color) !important;
+                opacity: var(--wuf-input-disabled-opacity);
+                color: var(--wuf-body-color) !important;
             }
             .mat-form-field-underline {
                 @include dotted-underline;
-                opacity: var(--kg-input-disabled-opacity);
+                opacity: var(--wuf-input-disabled-opacity);
             }
             .mat-form-field-suffix {
                 .mat-icon-button {
-                    opacity: var(--kg-input-disabled-opacity);
+                    opacity: var(--wuf-input-disabled-opacity);
                 }
             }
             .mat-select-value {
-                opacity: var(--kg-input-disabled-opacity);
+                opacity: var(--wuf-input-disabled-opacity);
             }
         }
     }
@@ -194,7 +194,7 @@ $kg-input-hint-vert-padding: .3em;
             In the following we are styling disabled inputs that ALSO have the ".readonly" classname.
             */
             .mat-form-field-infix {
-                background-color: var(--kg-input-readonly-bg-color);
+                background-color: var(--wuf-input-readonly-bg-color);
             }
             input,
             .mat-form-field-label-wrapper {
@@ -207,7 +207,7 @@ $kg-input-hint-vert-padding: .3em;
             .mat-form-field-suffix {
                 .mat-icon-button {
                     pointer-events: none;
-                    opacity: var(--kg-input-disabled-opacity);
+                    opacity: var(--wuf-input-disabled-opacity);
                 }
             }
             .mat-select-value {
@@ -215,7 +215,7 @@ $kg-input-hint-vert-padding: .3em;
             }
             .mat-form-field-suffix,
             .mat-form-field-prefix {
-                background-color: var(--kg-input-readonly-bg-color);
+                background-color: var(--wuf-input-readonly-bg-color);
             }
         }
     }
@@ -226,13 +226,13 @@ $kg-input-hint-vert-padding: .3em;
             &:hover {
                 &:not(.mat-form-field-invalid) {
                     .mat-form-field-infix {
-                        background-color: var(--kg-input-hover-bg-color)!important;
+                        background-color: var(--wuf-input-hover-bg-color)!important;
                     }
                 }
                 .mat-form-field-underline {
                     height: 2px;
                     bottom: 19px;
-                    background-color: var(--kg-input-underline-color);
+                    background-color: var(--wuf-input-underline-color);
                     transition: background-color .5s ease;
                     .mat-form-field-ripple {
                         height: 2px;
@@ -245,31 +245,31 @@ $kg-input-hint-vert-padding: .3em;
     /***** select *****/
     .mat-select-arrow,
     .mat-select-value-text {
-        color: var(--kg-body-color);
+        color: var(--wuf-body-color);
     }
     .mat-select-content {
-        background-color: var(--kg-color-white);
+        background-color: var(--wuf-color-white);
     }
     .mat-option {
-        color: var(--kg-body-color);
+        color: var(--wuf-body-color);
         .mat-option-pseudo-checkbox {
             .mat-option-text {
-                color: var(--kg-body-color);
+                color: var(--wuf-body-color);
             }
         }
         &.mat-option-disabled {
-            color: var(--kg-body-color);
+            color: var(--wuf-body-color);
             .mat-option-pseudo-checkbox,
             .mat-option-text {
-                opacity: var(--kg-input-disabled-opacity);
+                opacity: var(--wuf-input-disabled-opacity);
             }
         }
         &.mat-active {
-            color: var(--kg-body-color);
+            color: var(--wuf-body-color);
         }
         &:not(.mat-selected) {
             .mat-option-pseudo-checkbox {
-                border-color: var(--kg-body-color);
+                border-color: var(--wuf-body-color);
             }
         }
     }
@@ -279,7 +279,7 @@ $kg-input-hint-vert-padding: .3em;
         .mat-slider-wrapper {
             .mat-slider-track-wrapper {
                 .mat-slider-track-background {
-                    background-color: var(--kg-body-color);
+                    background-color: var(--wuf-body-color);
                     opacity: .5;
                 }
                 .mat-slider-track-fill {}
@@ -296,7 +296,7 @@ $kg-input-hint-vert-padding: .3em;
             .mat-slider-wrapper {
                 .mat-slider-thumb-container {
                     .mat-slider-thumb {
-                        background-color: var(--kg-body-color);
+                        background-color: var(--wuf-body-color);
                     }
                 }
             }
@@ -305,45 +305,45 @@ $kg-input-hint-vert-padding: .3em;
 
     /***** date picker *****/
     .mat-datepicker-toggle-default-icon {
-        color: var(--kg-body-color);
+        color: var(--wuf-body-color);
     }
 
     .mat-calendar {
-        background-color: var(--kg-body-bg);
-        color: var(--kg-body-color);
+        background-color: var(--wuf-body-bg);
+        color: var(--wuf-body-color);
         .mat-calendar-table-header {
-            color: var(--kg-body-color);
+            color: var(--wuf-body-color);
             opacity: .5;
         }
         .mat-calendar-body-cell-content {
-            color: var(--kg-body-color);
+            color: var(--wuf-body-color);
             &.mat-calendar-body-today {
-                border-color: var(--kg-color-gray-500);
+                border-color: var(--wuf-color-gray-500);
             }
             &:hover {
                 //background-color: rgba(0,0,0, .5);
             }
         }
         .mat-calendar-body-label {
-            color: var(--kg-body-color);
+            color: var(--wuf-body-color);
         }
         .mat-calendar-arrow {
-            border-top-color: var(--kg-body-color);
+            border-top-color: var(--wuf-body-color);
         }
         .mat-calendar-table-header-divider {
             &::after {
-                background-color: var(--kg-border-color);
+                background-color: var(--wuf-border-color);
             }
         }
         .mat-calendar-previous-button,
         .mat-calendar-next-button {
-            color: var(--kg-body-color);
+            color: var(--wuf-body-color);
         }
     }
 
     /***** radios *****/
     .mat-radio-group {
-        margin-bottom: calc(var(--kg-spacer)/2);
+        margin-bottom: calc(var(--wuf-spacer)/2);
         display: block;
     }
     .mat-radio-button {
@@ -351,18 +351,18 @@ $kg-input-hint-vert-padding: .3em;
         margin-right: 10px;
         .mat-radio-container {
             .mat-radio-outer-circle {
-                border-color: var(--kg-body-color);
+                border-color: var(--wuf-body-color);
             }
         }
         &.mat-radio-disabled {
             .mat-radio-label-content {
-                opacity: var(--kg-input-disabled-opacity);
-                color: var(--kg-body-color);
+                opacity: var(--wuf-input-disabled-opacity);
+                color: var(--wuf-body-color);
             }
             .mat-radio-container {
-                opacity: var(--kg-input-disabled-opacity);
+                opacity: var(--wuf-input-disabled-opacity);
                 .mat-radio-outer-circle {
-                    border-color: var(--kg-body-color);
+                    border-color: var(--wuf-body-color);
                 }
             }
         }
@@ -370,7 +370,7 @@ $kg-input-hint-vert-padding: .3em;
 
     /***** checkboxes *****/
     .mat-checkbox-group {
-        margin-bottom: calc(var(--kg-spacer)/2);
+        margin-bottom: calc(var(--wuf-spacer)/2);
         display: block;
     }
     .mat-checkbox {
@@ -379,16 +379,16 @@ $kg-input-hint-vert-padding: .3em;
             cursor: pointer;
         }
         .mat-checkbox-frame {
-            border-color: var(--kg-body-color);
+            border-color: var(--wuf-body-color);
         }
         .mat-checkbox-label {
-            color: var(--kg-body-color);
+            color: var(--wuf-body-color);
         }
         &.mat-checkbox-disabled {
             .mat-checkbox-layout {
-                opacity: var(--kg-input-disabled-opacity);
+                opacity: var(--wuf-input-disabled-opacity);
                 .mat-checkbox-frame {
-                    border-color: var(--kg-body-color);
+                    border-color: var(--wuf-body-color);
                 }
             }
         }
@@ -396,18 +396,18 @@ $kg-input-hint-vert-padding: .3em;
 
     /***** switches *****/
     .mat-slide-toggle-group {
-        margin-bottom: calc(var(--kg-spacer)/2);
+        margin-bottom: calc(var(--wuf-spacer)/2);
         display: block;
     }
     .mat-slide-toggle {
         .mat-slide-toggle-content {
-            font-size: var(--kg-font-size-base);
+            font-size: var(--wuf-font-size-base);
         }
         &:disabled,
         &.mat-disabled {
             .mat-slide-toggle-label {
                 .mat-slide-toggle-content {
-                    opacity: var(--kg-input-disabled-opacity);
+                    opacity: var(--wuf-input-disabled-opacity);
                 }
             }
         }
@@ -415,8 +415,8 @@ $kg-input-hint-vert-padding: .3em;
 
     /***** modals/dialogs *****/
     .mat-dialog-container {
-        background-color: var(--kg-body-bg);
-        color: var(--kg-body-color);
+        background-color: var(--wuf-body-bg);
+        color: var(--wuf-body-color);
     }
 
     /***** buttons *****/
@@ -427,11 +427,11 @@ $kg-input-hint-vert-padding: .3em;
 
     /***** cards *****/
     .mat-card {
-        background-color: var(--kg-card-bg-color);
-        color: var(--kg-body-color);
+        background-color: var(--wuf-card-bg-color);
+        color: var(--wuf-body-color);
         .mat-card-title,
         .mat-card-subtitle {
-            color: var(--kg-body-color);
+            color: var(--wuf-body-color);
         }
         .mat-card-subtitle {
             opacity: .5;
@@ -441,12 +441,12 @@ $kg-input-hint-vert-padding: .3em;
     /***** menu panel *****/
     .mat-menu-panel,
     .mat-autocomplete-panel {
-        background: var(--kg-color-white);
+        background: var(--wuf-color-white);
         .mat-menu-content {
-            color: var(--kg-body-color);
+            color: var(--wuf-body-color);
             .mat-menu-item {
                 background: transparent;
-                color: var(--kg-body-color);
+                color: var(--wuf-body-color);
                 &:hover {
                     background: rgba(0,0,0,.05);
                 }
@@ -456,8 +456,8 @@ $kg-input-hint-vert-padding: .3em;
 
     /***** autocomplete panel *****/
     .mat-autocomplete-panel {
-        background: var(--kg-color-white);
-        color: var(--kg-body-color);
+        background: var(--wuf-color-white);
+        color: var(--wuf-body-color);
     }
 
     /***** chips *****/
@@ -469,10 +469,10 @@ $kg-input-hint-vert-padding: .3em;
     }
     .mat-chip {
         .mat-chip-remove {
-            color: var(--kg-body-color);
+            color: var(--wuf-body-color);
         }
         &:not([color]) {
-            color: var(--kg-body-color);
+            color: var(--wuf-body-color);
         }
     }
 
@@ -487,16 +487,16 @@ $kg-input-hint-vert-padding: .3em;
         .mat-form-field-appearance-legacy {
             &.mat-form-field-invalid {
                 .mat-form-field-infix {
-                    border-color: var(--kg-color-danger);
-                    background: var(--kg-color-danger);
+                    border-color: var(--wuf-color-danger);
+                    background: var(--wuf-color-danger);
                 }
                 .mat-form-field-suffix,
                 .mat-form-field-prefix {
-                    background: var(--kg-color-danger);
+                    background: var(--wuf-color-danger);
                 }
                 .mat-form-field-underline {
                     .mat-form-field-ripple {
-                        background-color: var(--kg-color-white);
+                        background-color: var(--wuf-color-white);
                     }
                 }
             }
@@ -504,19 +504,19 @@ $kg-input-hint-vert-padding: .3em;
 
         /***** select *****/
         .mat-select-content {
-            background-color: var(--kg-body-bg);
+            background-color: var(--wuf-body-bg);
         }
 
         /***** buttons *****/
         .mat-raised-button:not([color]) {
-            background-color: var(--kg-color-secondary-lighter-10);
-            color: var(--kg-body-color);
+            background-color: var(--wuf-color-secondary-lighter-10);
+            color: var(--wuf-body-color);
         }
         .mat-raised-button[disabled] {
-            background-color: var(--kg-color-secondary-lighter-10);
+            background-color: var(--wuf-color-secondary-lighter-10);
         }
         .mat-icon-button {
-            //color: var(--kg-color-secondary-lighter-30);
+            //color: var(--wuf-color-secondary-lighter-30);
         }
 
         /***** disabled buttons *****/
@@ -544,17 +544,17 @@ $kg-input-hint-vert-padding: .3em;
 
         /***** menu panel *****/
         .mat-menu-panel {
-            background: var(--kg-body-bg);
+            background: var(--wuf-body-bg);
         }
 
         /***** autocomplete panel *****/
         .mat-autocomplete-panel {
-            background: var(--kg-body-bg);
+            background: var(--wuf-body-bg);
         }
 
         /***** chips *****/
         .mat-chip:not([color]) {
-            background-color: var(--kg-color-secondary-lighter-10);
+            background-color: var(--wuf-color-secondary-lighter-10);
         }
     }
 }
