--- a/packages/wuf-web-assets/assets/styles/partials/_code.scss
+++ b/packages/wuf-web-assets/assets/styles/partials/_code.scss
@@ -5,18 +5,18 @@
 
 $kbd-padding-y: .2rem;
 $kbd-padding-x: .4rem;
-$kbd-color: var(--kg-color-white);
-$kbd-bg: var(--kg-color-gray-900);
-$kbd-box-shadow: inset 0 -.1rem 0 css-rgba(var(--kg-color-black), .25);
-$nested-kbd-font-weight: var(--kg-font-weight-bold);
-$pre-color: var(--kg-color-gray-900);
+$kbd-color: var(--wuf-color-white);
+$kbd-bg: var(--wuf-color-gray-900);
+$kbd-box-shadow: inset 0 -.1rem 0 css-rgba(var(--wuf-color-black), .25);
+$nested-kbd-font-weight: var(--wuf-font-weight-bold);
+$pre-color: var(--wuf-color-gray-900);
 $pre-scrollable-max-height: 340px;
 
 :root {
     /***** CSS custom props used by <code> and made available for override *****/
-    --kg-code-color: var(--kg-color-gray-600);
-    --kg-code-bg-color: var(--kg-color-gray-300);
-    --kg-code-size: 87.5%;
+    --wuf-code-color: var(--wuf-color-gray-600);
+    --wuf-code-bg-color: var(--wuf-color-gray-300);
+    --wuf-code-size: 87.5%;
 }
 
 // Inline and block code styles
@@ -30,10 +30,10 @@ samp {
 // Inline code
 code, .code {
     word-break: break-word;
-    background-color: var(--kg-code-bg-color);
-    color: var(--kg-code-color);
-    font-size: var(--kg-code-size);
-    font-family: var(--kg-font-family-monospace);
+    background-color: var(--wuf-code-bg-color);
+    color: var(--wuf-code-color);
+    font-size: var(--wuf-code-size);
+    font-family: var(--wuf-font-family-monospace);
     padding: 2px;
 
     // Streamline the style when inside anchors to avoid broken underline and more
@@ -45,7 +45,7 @@ code, .code {
 // User input typically entered via keyboard
 kbd {
     padding: $kbd-padding-y $kbd-padding-x;
-    font-size: var(--kg-code-size);
+    font-size: var(--wuf-code-size);
     color: $kbd-color;
     background-color: $kbd-bg;
     @include border-radius(2px);
@@ -62,7 +62,7 @@ kbd {
 // Blocks of code
 pre {
     display: block;
-    font-size: var(--kg-code-size);
+    font-size: var(--wuf-code-size);
     color: $pre-color;
 
     // Account for some code outputs that place code tags in pre tags
