--- a/packages/wuf-web-assets/assets/styles/partials/_navigation.scss
+++ b/packages/wuf-web-assets/assets/styles/partials/_navigation.scss
@@ -12,17 +12,17 @@ Therefore, the only way to style these navigation menus is with global CSS.
 
 :root {
     /*     local var                   ||            global override                    ||              default value        */
-    --navigation-link-nested-color: var(--kg-navigation-link-nested-color, var(--kg-color-secondary-lighter-30));
-    --navigation-link-nested-bg-color: var(--kg-navigation-link-nested-bg-color, var(--kg-color-secondary-darker-5));
-    --navigation-link-nested-hover-color: var(--kg-navigation-link-nested-hover-color, var(--kg-color-secondary-lighter-40));
-    --navigation-link-nested-hover-bg-color: var(--kg-navigation-link-nested-hover-bg-color, var(--kg-color-secondary-darker-10));
-    --navigation-link-nested-active-color: var(--kg-navigation-link-nested-active-color, var(--kg-color-white));
-    --navigation-link-nested-active-hover-color: var(--kg-navigation-link-nested-active-hover-color, var(--kg-color-white));
-    --navigation-link-nested-active-bg-color: var(--kg-navigation-link-nested-active-bg-color, var(--kg-color-secondary-darker-10));
-    --navigation-link-nested-active-accent-color: var(--kg-navigation-link-nested-active-accent-color, var(--kg-color-primary));
+    --navigation-link-nested-color: var(--wuf-navigation-link-nested-color, var(--wuf-color-secondary-lighter-30));
+    --navigation-link-nested-bg-color: var(--wuf-navigation-link-nested-bg-color, var(--wuf-color-secondary-darker-5));
+    --navigation-link-nested-hover-color: var(--wuf-navigation-link-nested-hover-color, var(--wuf-color-secondary-lighter-40));
+    --navigation-link-nested-hover-bg-color: var(--wuf-navigation-link-nested-hover-bg-color, var(--wuf-color-secondary-darker-10));
+    --navigation-link-nested-active-color: var(--wuf-navigation-link-nested-active-color, var(--wuf-color-white));
+    --navigation-link-nested-active-hover-color: var(--wuf-navigation-link-nested-active-hover-color, var(--wuf-color-white));
+    --navigation-link-nested-active-bg-color: var(--wuf-navigation-link-nested-active-bg-color, var(--wuf-color-secondary-darker-10));
+    --navigation-link-nested-active-accent-color: var(--wuf-navigation-link-nested-active-accent-color, var(--wuf-color-primary));
 
     // Internal
-    --sidebar-bg-color: var(--kg-sidebar-bg-color, var(--kg-color-secondary));
+    --sidebar-bg-color: var(--wuf-sidebar-bg-color, var(--wuf-color-secondary));
 
     // TODO:
     // * include variable for margin around nav links (STILL uses margins)
@@ -30,23 +30,23 @@ Therefore, the only way to style these navigation menus is with global CSS.
 }
 
 div.kg-nav-menu-panel.mat-menu-panel {
-    background-color: var(--kg-navigation-link-nested-bg-color, var(--kg-color-secondary-darker-5)) !important;
+    background-color: var(--wuf-navigation-link-nested-bg-color, var(--wuf-color-secondary-darker-5)) !important;
     a.nav-link.mat-menu-item {
         text-decoration: none;
-        color: var(--kg-navigation-link-nested-color, var(--kg-color-secondary-lighter-30));
+        color: var(--wuf-navigation-link-nested-color, var(--wuf-color-secondary-lighter-30));
         &:hover {
-            color: var(--kg-navigation-link-nested-hover-color, var(--kg-color-secondary-lighter-40));
-            background-color: var(--kg-navigation-link-nested-hover-bg-color, var(--kg-color-secondary-darker-10));;
+            color: var(--wuf-navigation-link-nested-hover-color, var(--wuf-color-secondary-lighter-40));
+            background-color: var(--wuf-navigation-link-nested-hover-bg-color, var(--wuf-color-secondary-darker-10));;
         }
         &.active {
             &,
             &:hover {
-                color: var(--kg-navigation-link-nested-active-color, var(--kg-color-white));
+                color: var(--wuf-navigation-link-nested-active-color, var(--wuf-color-white));
                 background-color: transparent;
-                background-image: linear-gradient(to right, var(--kg-navigation-link-nested-active-accent-color, var(--kg-color-primary)) 4px, var(--kg-navigation-link-nested-active-bg-color, var(--kg-color-secondary-darker-10)) 4px);
+                background-image: linear-gradient(to right, var(--wuf-navigation-link-nested-active-accent-color, var(--wuf-color-primary)) 4px, var(--wuf-navigation-link-nested-active-bg-color, var(--wuf-color-secondary-darker-10)) 4px);
             }
             &:hover {
-                color: var(--kg-navigation-link-nested-active-hover-color, var(--kg-color-white));
+                color: var(--wuf-navigation-link-nested-active-hover-color, var(--wuf-color-white));
             }
         }
     }
