--- a/packages/wuf-web-assets/assets/styles/partials/_pagination.scss
+++ b/packages/wuf-web-assets/assets/styles/partials/_pagination.scss
@@ -4,18 +4,18 @@
  */
 
 :root {
-    --kg-pagination-color: var(--kg-link-color);
-    --kg-pagination-bg-color: var(--kg-color-white);
-    --kg-pagination-border-color: var(--kg-border-color);
-    --kg-pagination-hover-color: var(--kg-link-hover-color);
-    --kg-pagination-hover-bg-color: var(--kg-color-gray-200);
-    --kg-pagination-hover-border-color: var(--kg-color-gray-300);
-    --kg-pagination-active-color: var(--kg-color-primary);
-    --kg-pagination-active-bg-color: var(--kg-color-gray-200);
-    --kg-pagination-active-border-color: var(--kg-color-primary);
-    --kg-pagination-disabled-color: var(--kg-color-gray-600);
-    --kg-pagination-disabled-bg-color: var(--kg-color-white);
-    --kg-pagination-disabled-border-color: var(--kg-color-gray-300);
+    --wuf-pagination-color: var(--wuf-link-color);
+    --wuf-pagination-bg-color: var(--wuf-color-white);
+    --wuf-pagination-border-color: var(--wuf-border-color);
+    --wuf-pagination-hover-color: var(--wuf-link-hover-color);
+    --wuf-pagination-hover-bg-color: var(--wuf-color-gray-200);
+    --wuf-pagination-hover-border-color: var(--wuf-color-gray-300);
+    --wuf-pagination-active-color: var(--wuf-color-primary);
+    --wuf-pagination-active-bg-color: var(--wuf-color-gray-200);
+    --wuf-pagination-active-border-color: var(--wuf-color-primary);
+    --wuf-pagination-disabled-color: var(--wuf-color-gray-600);
+    --wuf-pagination-disabled-bg-color: var(--wuf-color-white);
+    --wuf-pagination-disabled-border-color: var(--wuf-color-gray-300);
 }
 
 .pagination {
@@ -28,17 +28,17 @@
     position: relative;
     display: block;
     padding: $pagination-padding-y $pagination-padding-x;
-    margin-left: calc(var(--kg-border-width) * -1);
+    margin-left: calc(var(--wuf-border-width) * -1);
     line-height: $pagination-line-height;
-    color: var(--kg-pagination-color);
-    background-color: var(--kg-pagination-bg-color);
-    border: var(--kg-border-width) solid var(--kg-pagination-border-color);
+    color: var(--wuf-pagination-color);
+    background-color: var(--wuf-pagination-bg-color);
+    border: var(--wuf-border-width) solid var(--wuf-pagination-border-color);
 
     &:hover {
-        color: var(--kg-pagination-hover-color);
+        color: var(--wuf-pagination-hover-color);
         text-decoration: none;
-        background-color: var(--kg-pagination-hover-bg-color);
-        border-color: var(--kg-pagination-hover-border-color);
+        background-color: var(--wuf-pagination-hover-bg-color);
+        border-color: var(--wuf-pagination-hover-border-color);
     }
 
     &:focus {
@@ -56,28 +56,28 @@
     &:first-child {
         .page-link {
             margin-left: 0;
-            @include border-left-radius(var(--kg-border-radius));
+            @include border-left-radius(var(--wuf-border-radius));
         }
     }
     &:last-child {
         .page-link {
-            @include border-right-radius(var(--kg-border-radius));
+            @include border-right-radius(var(--wuf-border-radius));
         }
     }
 
     &.active .page-link {
         z-index: 1;
-        color: var(--kg-color-white);
-        background-color: var(--kg-pagination-active-color);
-        border-color: var(--kg-pagination-active-border-color);
+        color: var(--wuf-color-white);
+        background-color: var(--wuf-pagination-active-color);
+        border-color: var(--wuf-pagination-active-border-color);
     }
 
     &.disabled .page-link {
-        color: var(--kg-pagination-disabled-color);
+        color: var(--wuf-pagination-disabled-color);
         pointer-events: none;
         // Opinionated: remove the "hand" cursor set previously for .page-link
         cursor: auto;
-        background-color: var(--kg-pagination-disabled-bg-color);
-        border-color: var(--kg-pagination-disabled-border-color);
+        background-color: var(--wuf-pagination-disabled-bg-color);
+        border-color: var(--wuf-pagination-disabled-border-color);
     }
 }
