--- a/packages/wuf-web-message/src/wuf-web-message.scss
+++ b/packages/wuf-web-message/src/wuf-web-message.scss
@@ -6,25 +6,25 @@
 //Expose custom properties for overrides
 :host {
     /*     local var           ||               global override            ||        default value        */
-    --message-info-bg-color: var(--kg-message-info-bg-color, var(--kg-color-info));
-    --message-info-color: var(--kg-message-info-color, var(--kg-color-white));
-    --message-info-link-color: var(--kg-message-info-link-color, var(--kg-color-info-darker));
+    --message-info-bg-color: var(--wuf-message-info-bg-color, var(--wuf-color-info));
+    --message-info-color: var(--wuf-message-info-color, var(--wuf-color-white));
+    --message-info-link-color: var(--wuf-message-info-link-color, var(--wuf-color-info-darker));
 
-    --message-success-bg-color: var(--kg-message-success-bg-color, var(--kg-color-success));
-    --message-success-color: var(--kg-message-success-color, var(--kg-color-white));
-    --message-success-link-color: var(--kg-message-success-link-color, var(--kg-color-success-darker));
+    --message-success-bg-color: var(--wuf-message-success-bg-color, var(--wuf-color-success));
+    --message-success-color: var(--wuf-message-success-color, var(--wuf-color-white));
+    --message-success-link-color: var(--wuf-message-success-link-color, var(--wuf-color-success-darker));
 
-    --message-warning-bg-color: var(--kg-message-warning-bg-color, var(--kg-color-warning));
-    --message-warning-color: var(--kg-message-warning-color, var(--kg-color-warning-darkest));
-    --message-warning-link-color: var(--kg-message-warning-link-color, var(--kg-color-warning-darker));
+    --message-warning-bg-color: var(--wuf-message-warning-bg-color, var(--wuf-color-warning));
+    --message-warning-color: var(--wuf-message-warning-color, var(--wuf-color-warning-darkest));
+    --message-warning-link-color: var(--wuf-message-warning-link-color, var(--wuf-color-warning-darker));
 
-    --message-danger-bg-color: var(--kg-message-danger-bg-color, var(--kg-color-danger));
-    --message-danger-color: var(--kg-message-danger-color, var(--kg-color-white));
-    --message-danger-link-color: var(--kg-message-danger-link-color, var(--kg-color-danger-darker));
+    --message-danger-bg-color: var(--wuf-message-danger-bg-color, var(--wuf-color-danger));
+    --message-danger-color: var(--wuf-message-danger-color, var(--wuf-color-white));
+    --message-danger-link-color: var(--wuf-message-danger-link-color, var(--wuf-color-danger-darker));
 
-    --message-close-color: var(--kg-message-close-color, var(--kg-color-gray-800, #424242));
-    --message-close-hover-color: var(--kg-message-hover-color, var(--kg-color-gray-800, #424242));
-    --message-close-shadow-color: var(--kg-message-close-shadow-color, var(--kg-color-white, #ffffff));
+    --message-close-color: var(--wuf-message-close-color, var(--wuf-color-gray-800, #424242));
+    --message-close-hover-color: var(--wuf-message-hover-color, var(--wuf-color-gray-800, #424242));
+    --message-close-shadow-color: var(--wuf-message-close-shadow-color, var(--wuf-color-white, #ffffff));
 }
 
 .message {
@@ -47,7 +47,7 @@
         padding: 0;
 
         &:hover, &:focus {
-            color: var(--kg-color-black);
+            color: var(--wuf-color-black);
             text-decoration: none;
             opacity: .75;
         }
