--- a/projects/anviltech/wuf-ang-dashboard/src/lib/_internal/kpi-value/kpi-value.component.scss
+++ b/projects/anviltech/wuf-ang-dashboard/src/lib/_internal/kpi-value/kpi-value.component.scss
@@ -12,7 +12,7 @@ svg {
     min-height: 30px;
     max-height: 60px; // This is what keeps the text from getting too big as browser height increases
     text {
-        fill: var(--kg-body-color);
+        fill: var(--wuf-body-color);
     }
 }
 
