--- a/projects/anviltech/wuf-ang-layout/src/lib/layout-components/breadcrumb/breadcrumb.component.scss
+++ b/projects/anviltech/wuf-ang-layout/src/lib/layout-components/breadcrumb/breadcrumb.component.scss
@@ -9,14 +9,14 @@ $breadcrumb-padding-y: .75rem;
 $breadcrumb-padding-x: 1rem;
 $breadcrumb-item-padding: .5rem;
 $breadcrumb-margin-bottom: 1rem;
-$breadcrumb-active-color: var(--kg-breadcrumb-color, --kg-color-gray-500);
-$breadcrumb-divider-color: var(--kg-breadcrumb-color, --kg-color-gray-500);
+$breadcrumb-active-color: var(--wuf-breadcrumb-color, --wuf-color-gray-500);
+$breadcrumb-divider-color: var(--wuf-breadcrumb-color, --wuf-color-gray-500);
 $breadcrumb-divider: "/";
 
 .breadcrumb-wrap {
     .breadcrumb {
         font-size: 12px;
-        color: var(--kg-breadcrumb-color, var(--kg-color-gray-500));
+        color: var(--wuf-breadcrumb-color, var(--wuf-color-gray-500));
         display: flex;
         flex-wrap: wrap;
         padding: 0;
@@ -55,7 +55,7 @@ $breadcrumb-divider: "/";
             a.breadcrumb-link {
                 opacity: .6;
                 transition: opacity .25s ease;
-                color: var(--kg-breadcrumb-color, var(--kg-color-gray-500));
+                color: var(--wuf-breadcrumb-color, var(--wuf-color-gray-500));
                 &.active, &:hover {
                     opacity: 1;
                 }
