--- a/projects/anviltech/wuf-ang-layout/src/lib/layout-components/sidebar/sidebar-main/sidebar-main.component.scss
+++ b/projects/anviltech/wuf-ang-layout/src/lib/layout-components/sidebar/sidebar-main/sidebar-main.component.scss
@@ -6,13 +6,13 @@
 //Expose custom properties for overrides
 :host {
     /*     local var        ||              global override                     ||          default value        */
-    --sidebar-width:                    var(--kg-sidebar-width-current,                 var(--kg-sidebar-width, 230px)); // The "current" value is used as an override by the sidebar resizer
-    --sidebar-color:                    var(--kg-sidebar-color,                         var(--kg-color-secondary-lighter-50));
-    --sidebar-bg-color:                 var(--kg-sidebar-bg-color,                      var(--kg-color-secondary));
-    --sidebar-text-size:                var(--kg-sidebar-text-current,                  1rem); // The "current" value is used as an override by the sidebar resizer
-    --sidebar-minimized-size:           var(--kg-sidebar-minimized-size,                40px); // This value should match that of the var mainPanelMinSize used in sidebar-main.component.ts
-    --sidebar-scroll-track-bg-color:    var(--kg-sidebar-scroll-track-bg-color,         var(--kg-color-secondary-darker-10));
-    --sidebar-scroll-thumb-bg-color:    var(--kg-sidebar-scroll-thumb-bg-color,         var(--kg-color-secondary-lighter-20));
+    --sidebar-width:                    var(--wuf-sidebar-width-current,                 var(--wuf-sidebar-width, 230px)); // The "current" value is used as an override by the sidebar resizer
+    --sidebar-color:                    var(--wuf-sidebar-color,                         var(--wuf-color-secondary-lighter-50));
+    --sidebar-bg-color:                 var(--wuf-sidebar-bg-color,                      var(--wuf-color-secondary));
+    --sidebar-text-size:                var(--wuf-sidebar-text-current,                  1rem); // The "current" value is used as an override by the sidebar resizer
+    --sidebar-minimized-size:           var(--wuf-sidebar-minimized-size,                40px); // This value should match that of the var mainPanelMinSize used in sidebar-main.component.ts
+    --sidebar-scroll-track-bg-color:    var(--wuf-sidebar-scroll-track-bg-color,         var(--wuf-color-secondary-darker-10));
+    --sidebar-scroll-thumb-bg-color:    var(--wuf-sidebar-scroll-thumb-bg-color,         var(--wuf-color-secondary-lighter-20));
 }
 
 .sidebar-wrap {
