--- a/projects/anviltech/wuf-ang-smart-table/src/lib/smart-table.component.scss
+++ b/projects/anviltech/wuf-ang-smart-table/src/lib/smart-table.component.scss
@@ -6,23 +6,23 @@
 //Expose custom properties for overrides
 :host {
     /*     local var                   ||            global override                    ||        default value        */
-    --table-bg-color:                       var( --kg-table-bg-color,                       var(--kg-color-white) );
-    --table-border-color:                   var( --kg-table-border-color,                   var(--kg-border-color) );
-    --table-head-bg-color:                  var( --kg-table-head-bg-color,                  var(--kg-color-white) );
-    --table-head-color:                     var( --kg-table-head-color,                     var(--kg-body-color) );
-    --table-filter-bg-color:                var( --kg-table-filter-bg-color,                var(--kg-color-white) );
-    --table-filter-color:                   var( --kg-table-filter-color,                   var(--kg-color-gray-400) );
-    --table-cell-padding-vert:              var( --kg-table-cell-padding-vert,              5px );
-    --table-cell-padding-horiz:             var( --kg-table-cell-padding-horiz,             20px );
-    --table-action-padding:                 var( --kg-table-action-padding,                 var(--table-cell-padding-vert, 4px) );
-    --table-font-size:                      var( --kg-table-font-size,                      1rem );
-    --table-active-bg-color:                var( --kg-table-active-bg-color,                var(--kg-color-primary-lighter-30) );
-    --table-accent-bg-color:                var( --kg-table-accent-bg-color,                var(--kg-color-secondary-lighter-60) );
-    --table-hover-bg-color:                 var( --kg-table-hover-bg-color,                 var(--kg-color-secondary-lighter-40) );
+    --table-bg-color:                       var( --wuf-table-bg-color,                       var(--wuf-color-white) );
+    --table-border-color:                   var( --wuf-table-border-color,                   var(--wuf-border-color) );
+    --table-head-bg-color:                  var( --wuf-table-head-bg-color,                  var(--wuf-color-white) );
+    --table-head-color:                     var( --wuf-table-head-color,                     var(--wuf-body-color) );
+    --table-filter-bg-color:                var( --wuf-table-filter-bg-color,                var(--wuf-color-white) );
+    --table-filter-color:                   var( --wuf-table-filter-color,                   var(--wuf-color-gray-400) );
+    --table-cell-padding-vert:              var( --wuf-table-cell-padding-vert,              5px );
+    --table-cell-padding-horiz:             var( --wuf-table-cell-padding-horiz,             20px );
+    --table-action-padding:                 var( --wuf-table-action-padding,                 var(--table-cell-padding-vert, 4px) );
+    --table-font-size:                      var( --wuf-table-font-size,                      1rem );
+    --table-active-bg-color:                var( --wuf-table-active-bg-color,                var(--wuf-color-primary-lighter-30) );
+    --table-accent-bg-color:                var( --wuf-table-accent-bg-color,                var(--wuf-color-secondary-lighter-60) );
+    --table-hover-bg-color:                 var( --wuf-table-hover-bg-color,                 var(--wuf-color-secondary-lighter-40) );
 
-    --table-button-add-color:               var( --kg-table-button-add-color,               var(--table-head-color) );
-    --table-button-add-bg-color:            var( --kg-table-button-add-bg-color,            var(--table-head-bg-color) );
-    --table-button-add-bg-hover-color:      var( --kg-table-button-add-bg-hover-color,      var(--kg-color-secondary-lighter-10) );
+    --table-button-add-color:               var( --wuf-table-button-add-color,               var(--table-head-color) );
+    --table-button-add-bg-color:            var( --wuf-table-button-add-bg-color,            var(--table-head-bg-color) );
+    --table-button-add-bg-hover-color:      var( --wuf-table-button-add-bg-hover-color,      var(--wuf-color-secondary-lighter-10) );
 }
 
 
@@ -97,11 +97,11 @@
                                 &:-ms-input-placeholder, /* IE 10+ */
                                 &:-moz-placeholder /* Firefox 18- */ {
                                     opacity: 1;
-                                    color: var(--kg-color-gray-500);
+                                    color: var(--wuf-color-gray-500);
                                 }
                                 font-style: italic;
                                 opacity: 1;
-                                color: var(--kg-color-primary);
+                                color: var(--wuf-color-primary);
                                 padding: 0;
                                 margin: 0;
                                 border: 0;
@@ -113,7 +113,7 @@
                                 &:focus {
                                     outline:none;
                                     box-shadow: none;
-                                    border-bottom-color: var(--kg-color-primary);
+                                    border-bottom-color: var(--wuf-color-primary);
                                 }
                             }
                         }
