--- a/src/app/internal/layouts/main/main.component.scss
+++ b/src/app/internal/layouts/main/main.component.scss
@@ -8,7 +8,7 @@ $kg-header-still-width: 90px;
 $kg-header-still-top-padding: 18px;
 
 .util-wrap {
-    height: var(--kg-header-height);
+    height: var(--wuf-header-height);
     position: relative;
     display: inline-block;
     padding: $kg-header-still-top-padding 0 0 $kg-header-still-width;
@@ -16,8 +16,8 @@ $kg-header-still-top-padding: 18px;
 
 .theme-still-wrap {
     display: inline-block;
-    background-image: linear-gradient(120deg, transparent 0px, transparent 30px, var(--kg-color-primary) 30px, var(--kg-color-primary) 75px, transparent 75px, transparent 100%);
-    height: var(--kg-header-height);
+    background-image: linear-gradient(120deg, transparent 0px, transparent 30px, var(--wuf-color-primary) 30px, var(--wuf-color-primary) 75px, transparent 75px, transparent 100%);
+    height: var(--wuf-header-height);
     position: absolute;
     top: 0;
     left: 0;
