--- a/src/app/pages/components/card/card.component.html
+++ b/src/app/pages/components/card/card.component.html
@@ -71,9 +71,9 @@
                 </tr>
                 </thead>
                 <tr>
-                    <td class="propName">--kg-card-bg-color</td>
+                    <td class="propName">--wuf-card-bg-color</td>
                     <td class="description">The background color used for card elements.</td>
-                    <td class="value">var(--kg-color-white, #ffffff)</td>
+                    <td class="value">var(--wuf-color-white, #ffffff)</td>
                 </tr>
             </table>
         </div>
