--- a/src/app/pages/components/gridster/gridster.component.html
+++ b/src/app/pages/components/gridster/gridster.component.html
@@ -98,9 +98,9 @@
                 </tr>
                 </thead>
                 <tr>
-                    <td class="propName">--kg-card-bg-color</td>
+                    <td class="propName">--wuf-card-bg-color</td>
                     <td class="description">The background color used for card elements, including gridster items.</td>
-                    <td class="value">var(--kg-color-white, #ffffff)</td>
+                    <td class="value">var(--wuf-color-white, #ffffff)</td>
                 </tr>
             </table>
 
