--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,14 +17,14 @@ table.css-props-table {
         td {
             &.propName,
             &.value {
-                font-family: var(--kg-font-family-monospace);
+                font-family: var(--wuf-font-family-monospace);
                 font-size: .85rem;
                 white-space: nowrap;
             }
             .swatch {
                 color: #ffffff;
                 font-size: 10px;
-                font-family: var(--kg-font-family-monospace);
+                font-family: var(--wuf-font-family-monospace);
                 padding: 10px;
                 display: block;
                 height: 100%;
@@ -68,18 +68,18 @@ table.prop-table {
     // Error message
     .mat-error {
         &.fill {
-            @include border-bottom-radius(var(--kg-border-radius));
+            @include border-bottom-radius(var(--wuf-border-radius));
             @include alert-variant('danger');
         }
     }
     &.noFill {
         .mat-form-field-suffix,
         .mat-form-field-prefix {
-            background: var(--kg-input-bg-color)!important;
+            background: var(--wuf-input-bg-color)!important;
         }
         .mat-form-field-infix {
-            border-color: var(--kg-input-bg-color)!important;
-            background: var(--kg-input-bg-color)!important;
+            border-color: var(--wuf-input-bg-color)!important;
+            background: var(--wuf-input-bg-color)!important;
         }
     }
 }
@@ -92,32 +92,32 @@ table.prop-table {
         // Error message
         .mat-error {
             &.fill {
-                background: var(--kg-color-danger);
-                color: var(--kg-color-white);
+                background: var(--wuf-color-danger);
+                color: var(--wuf-color-white);
             }
         }
         &.noFill {
             .mat-form-field-infix {
-                border-color: var(--kg-input-bg-color);
-                background: var(--kg-input-bg-color);
+                border-color: var(--wuf-input-bg-color);
+                background: var(--wuf-input-bg-color);
             }
             .mat-form-field-suffix,
             .mat-form-field-prefix {
-                background: var(--kg-input-bg-color);
+                background: var(--wuf-input-bg-color);
             }
             // Error message
             .errorIcon {
-                color: var(--kg-color-danger);
+                color: var(--wuf-color-danger);
             }
             .mat-form-field-label {
-                color: var(--kg-color-danger);
+                color: var(--wuf-color-danger);
                 .mat-form-field-required-marker {
-                    color: var(--kg-color-danger);
+                    color: var(--wuf-color-danger);
                 }
             }
             .mat-form-field-underline {
                 .mat-form-field-ripple {
-                    background-color: var(--kg-body-color);
+                    background-color: var(--wuf-body-color);
                 }
             }
         }
